// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering renders correctly flat 1`] = `
<button
  className="root
        priorityFlat
        sizeMedium
        variantPrimary"
  disabled={false}
  onClick={null}
  title={null}
  type="button"
>
  <span
    className="label"
  >
    button
  </span>
</button>
`;

exports[`rendering renders correctly label visibility 1`] = `
<button
  className="root
        priorityDefault
        sizeMedium
        variantPrimary
        
        
        withLabelHidden"
  disabled={false}
  onClick={null}
  title="button"
  type="button"
>
  <span
    className="label"
  >
    button
  </span>
</button>
`;

exports[`rendering renders correctly mandatory props only 1`] = `
<button
  className="root
        priorityDefault
        sizeMedium
        variantPrimary"
  disabled={false}
  onClick={null}
  title={null}
  type="button"
>
  <span
    className="label"
  >
    button
  </span>
</button>
`;

exports[`rendering renders correctly priority \`link\` 1`] = `
<button
  className="root
        priorityLink"
  disabled={false}
  onClick={null}
  title={null}
  type="button"
>
  <span
    className="label"
  >
    link
  </span>
</button>
`;

exports[`rendering renders correctly priority \`link\` with all props 1`] = `
<button
  className="root
        priorityLink"
  disabled={true}
  id="custom-id"
  onClick={null}
  title="link"
  type="button"
>
  <span
    className="beforeLabel"
  >
    <span
      className="icon"
    />
  </span>
  <span
    className="label"
    id="custom-id__labelText"
  >
    link
  </span>
  <span
    className="afterLabel"
  >
    <span
      className="icon"
    />
  </span>
</button>
`;

exports[`rendering renders correctly priority 1`] = `
<button
  className="root
        priorityOutline
        sizeMedium
        variantPrimary"
  disabled={false}
  onClick={null}
  title={null}
  type="button"
>
  <span
    className="label"
  >
    button
  </span>
</button>
`;

exports[`rendering renders correctly size 1`] = `
<button
  className="root
        priorityDefault
        sizeLarge
        variantPrimary"
  disabled={false}
  onClick={null}
  title={null}
  type="button"
>
  <span
    className="label"
  >
    button
  </span>
</button>
`;

exports[`rendering renders correctly variant 1`] = `
<button
  className="root
        priorityDefault
        sizeMedium
        variantSuccess"
  disabled={false}
  onClick={null}
  title={null}
  type="button"
>
  <span
    className="label"
  >
    button
  </span>
</button>
`;

exports[`rendering renders correctly with all props 1`] = `
<button
  className="root
        priorityFlat
        sizeLarge
        variantSuccess
        isRootBlock
        isRootGrouped
        withLabelHiddenMobile"
  disabled={true}
  id="custom-id"
  onClick={null}
  title="button"
  type="button"
>
  <span
    className="startCorner"
  >
    <Badge
      label={1}
      priority="default"
      type="note"
    />
  </span>
  <span
    className="beforeLabel"
  >
    <span
      className="icon"
    />
  </span>
  <span
    className="label"
    id="custom-id__labelText"
  >
    button
  </span>
  <span
    className="afterLabel"
  >
    <span
      className="icon"
    />
  </span>
  <span
    className="endCorner"
  >
    <Badge
      label={2}
      priority="default"
      type="note"
    />
  </span>
  <span
    className="loadingIcon"
  >
    <span
      className="icon"
    />
  </span>
</button>
`;

exports[`rendering renders correctly with icon 1`] = `
<button
  className="root
        priorityDefault
        sizeMedium
        variantPrimary"
  disabled={false}
  onClick={null}
  title={null}
  type="button"
>
  <span
    className="beforeLabel"
  >
    <span
      className="icon"
    />
  </span>
  <span
    className="label"
  >
    button
  </span>
</button>
`;
